--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
 }
 
 h1 {
+  font-size: 1.1rem;
   color: #fff;
 }
 
@@ -12,6 +13,8 @@ h1 {
   width: 100vw;
   height: 100vh;
 }
+
+
 .wrapper {
   display: flex;
   flex-direction: row;
