--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,17 @@ h1 {
 ::-webkit-scrollbar {
   display:none;
 }
+
+div {
+  flex: 1;
+  justify-content: center;
+  align-items: center
+}
+
+#particle-canvas {
+  position: absolute !important;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+}
