--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
   box-sizing: border-box;
 }
 
+
+
 h1 {
   font-size: 1.1rem;
   color: #fff;
@@ -63,4 +65,10 @@ div {
   top:0;
   width:100%;
   height:100%;
+}
+
+button {
+  margin: 200px;
+  z-index: 10222;
+  padding: 20px;
 }
