--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -11,7 +11,7 @@
 }
 
 #about {
-  height: 100vh; /* Magic here */
+  height: 80vh; /* Magic here */
   display: flex;
   text-align: center;
   align-items: center;
@@ -45,6 +45,8 @@
 }
 
 .prevnext {
+  bottom: 0%;
+  position: absolute;
   display: flex;
   justify-content: space-between;
 
